ChangeLog for Pylint
====================

--
    * Run pylint as a python module 'python -m pylint' (anatoly techtonik)

    * Check for non-exception classes inside an except clause

    * epylint support options to give to pylint after the file to analyze and
      have basic input validation (bitbucket #53 and #54), patches provided by
      felipeochoa and Brian Lane

    * Added a new warning, 'non-iterator-returned', for non-iterators 
      returned by '__iter__'


2013-08-06  --  1.0.0

    * Add check for the use of 'exec' function

    * New --msg-template option to control output, deprecating "msvc" and
      "parseable" output formats as well as killing `--include-ids` and `--symbols`
      options

    * Do not emit [fixme] for every line if the config value 'notes'
      is empty, but [fixme] is enabled.

    * Emit warnings about lines exceeding the column limit when
      those lines are inside multiline docstrings.

    * Do not double-check parameter names with the regex for parameters and
      inline variables.

    * Added a new warning missing-final-newline (C0304) for files missing
      the final newline.

    * Methods that are decorated as properties are now treated as attributes
      for the purposes of name checking.

    * Names of derived instance class member are not checked any more.

    * Names in global statements are now checked against the regular
      expression for constants.

    * For toplevel name assignment, the class name regex will be used if
      pylint can detect that value on the right-hand side is a class
      (like collections.namedtuple()).

    * Simplified invalid-name message

    * Added a new warning invalid-encoded-data (W0512) for files that
      contain data that cannot be decoded with the specified or
      default encoding.

    * New warning bad-open-mode (W1501) for calls to open (or file) that
      specify invalid open modes (Original implementation by Sasha Issayev).
