@@ -1,0 +1,2 @@
+E: 40:FirstBadContextManager.__exit__: __exit__ must accept 3 arguments: type, value, traceback
+E: 49:SecondBadContextManager.__exit__: __exit__ must accept 3 arguments: type, value, traceback
